--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ textarea {
 body {
 	background-image: url(../img/background.png);
 	background-size:cover;
+	background-repeat:no-repeat;
 	font-family: 'Helvetica';
 	height:100%;
 	width: 100%;
